<resources>
    <string name="app_name">GithubUser</string>
    <string name="userNone">Tidak ada user, mohon cari lagi..</string>
    <string name="searchbar_hint">Masukkan Username</string>
    <string name="Username">Username</string>
    <string name="location">location</string>
    <string name="following">Following</string>
    <string name="follower">Followers</string>
    <string name="followingSampel">30</string>
    <string name="followerSampel">120</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Theme</string>
</resources>